Don't use HashSet for column lists